2004-02-04  Bruno Haible  <bruno@clisp.org>

	* gettextize.in: Add po to SUBDIRS if it was created in this run.
	Tell the user to create po/POTFILES.in if it is not yet there.
	Reported by Prof. Roberto Bagnara <bagnara@cs.unipr.it>.

2004-02-02  Bruno Haible  <bruno@clisp.org>

	* gettextize.in (m4filelist): Add glibc2.m4.

2004-01-29  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.1 released.

2004-01-28  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14 released.

2004-01-19  Bruno Haible  <bruno@clisp.org>

	* gettextize.in: Modify DIST_SUBDIRS like SUBDIRS, when it was found in
	Makefile.am.
	Reported by Dalibor Topic <robilad@kaffe.org>.

2003-12-17  Bruno Haible  <bruno@clisp.org>

	* gettext-0.13.1 released.

2003-11-30  Bruno Haible  <bruno@clisp.org>

	* gettext-0.13 released.

2003-11-23  Bruno Haible  <bruno@clisp.org>

	* gettextize.in (m4filelist): Remove ssize_t.m4.

2003-11-16  Bruno Haible  <bruno@clisp.org>

	* gettextize.in (m4filelist): Add size_max.m4, ssize_t.m4, xsize.m4.

2003-11-08  Bruno Haible  <bruno@clisp.org>

	* autopoint.in: Allow configure.in.in to be used instead of
	configure.in.

2003-08-11  Bruno Haible  <bruno@clisp.org>

	* autopoint.in: When local files have been modified, create a .diff
	file for the user's convenience.
	Suggested by Denis Barbier <barbier@debian.org>.

2003-08-07  Bruno Haible  <bruno@clisp.org>

	* autopoint.in: Fix the regular expression used to parse intl/VERSION.
	Patch by Denis Barbier <barbier@debian.org>.

2003-06-19  Bruno Haible  <bruno@clisp.org>

	* gettextize.in (m4filelist): Add intmax.m4, longdouble.m4,
	longlong.m4, printf-posix.m4, signed.m4, wchar_t.m4, wint_t.m4.

2003-05-22  Bruno Haible  <bruno@clisp.org>

	* gettext-0.12.1 released.

2003-05-17  Bruno Haible  <bruno@clisp.org>

	* gettext-0.12 released.

2003-05-08  Bruno Haible  <bruno@clisp.org>

	* gettextize.in: Ignore ACLOCAL_AMFLAGS options of the form -Idir when
	dir is an absolute pathname.