@@ -927,7 +927,13 @@ func_modify_configure_in ()
 
 if test -n "$added_acoutput"; then
   if grep '^AC_CONFIG_FILES(' "$srcdir/$configure_in" > /dev/null; then
-    sed -e "s%^\\(AC_CONFIG_FILES([^])\\,]*\\)%\\1$added_acoutput %" < "$srcdir/$configure_in" > "$srcdir/$configure_in.tmp"
+    sedprog='
+ta
+b
+:a
+n
+ba'
+    sed -e "s%^\\(AC_CONFIG_FILES([^])\\,]*\\)%\\1$added_acoutput %$sedprog" < "$srcdir/$configure_in" > "$srcdir/$configure_in.tmp"
     func_modify_configure_in "(AC_CONFIG_FILES): Add "`echo $added_acoutput | sed -e 's/ /, /g'`'.'
   else
     if grep '^AC_OUTPUT(' "$srcdir/$configure_in" > /dev/null; then
